# pebble-adventure

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
resources/images/backgrounds/: bg_cave.png.backup  bg_storm.png.backup  bg_water.png.backup  bg_water.png.backup2  bg_water.png.backup3
src/c/: backgrounds.c  backgrounds.h  backgrounds_effects.c  events.c  events.h  game_state.c  game_state.h  minigames.c  minigames.h  pebble-adventure.c  riddles.h  screens.c  screens.h  shared_types.h  sprites.c  sprites.h  stats.c  stats.h  ui.c  ui.h
src/c/minigames/: minigame_catch.c  minigame_dodge.c  minigame_menu.c  minigame_riddle.c  minigame_treasure.c  minigames_internal.h  riddles.c  riddles.h
src/c/screens/: screen_adventure.c  screen_creation.c  screen_levelup.c  screen_main.c  screen_menu.c  screen_options.c  screen_results.c  screen_stat_alloc.c  screen_stat_alloc.h  screen_stats.c  screen_worker.c  screens_internal.h
tools/: add_sprite_outline.js  convert_bw_backgrounds.js  gen_icon.js
worker_src/c/: pebble-adventure_worker.c
